--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@types/uuid": "^9.0.2",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
